# questionnaire

./: .dockerignore  README.md  pyproject.toml
src/: Dockerfile  Makefile  db.sqlite3  docker-compose.yml  fill_survey_ratings.py  nginx.conf  pyproject.toml
src/questionnaire/: admin.py  models.py  urls.py  utils.py  views.py
src/questionnaire/management/commands/: wait_for_db.py  wait_for_django.py
src/questionnaire/static/admin/js/: question_admin.js
src/questionnaire/templates/: 404.html  500.html  base.html  home.html  questionnaire.html  questionnaire_list.html  thank_you.html  user_profile_form.html
src/questionnaire/templates/partials/: common_recommendations.html  details.html  food.html  lifestyle.html  mbi.html  nutrition.html  stress.html  work.html
src/questionnaire/tests/: test_admin.py  test_models.py  test_utils.py  test_views.py
src/survey/: settings.py  urls.py
